2011-06-xx Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.7

  * Corregido selector de clientes en albaranes
  * Valores iniciales de los filtros de fecha
  * Eliminado filtro de "pagado" en seccion tesoreria 
  * Edicion de campos de albaran ya creado en la introduccion de lineas
  * Captura de excepciones para busquedas de ISBN
  * Duplicacion de facturas

2011-06-08 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.6

  * Resueltos algunos bugs visuales de cierres de divs olvidados
  * Incluido filtrado de facturas por cliente y proveedor
  * Incluido filtrado por facturas pagadas/no pagadas
  * Eliminada caja de filtrado activo y sustituida por los
    selectores de filtrado
  * En los listados de facturas de proveedores y clientes se
    muestra el codigo de albaran si no se definio codigo de
    factura
  * Incluido nuevo sitio de busqueda de codigo ISBN

2011-05-26 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.5

  * Posibilidad de forzado de importes de facturas de proveedores

2011-05-20 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.4.1

  * Correccion en entradas de lineas de albaran para compras
  * Cambios en permisos de algunos archivos

2011-05-20 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.4

  * Eliminada opcion de recuperacion de albaranes perdidos (estaba
    solo para recuperar elementos del bug de creacion de facturas
    corregido en la version 0.6.1)
  * Cambios en backup de BBDD (el .sql no se comprime)
  * Entrada de lineas de albaran por concepto (sin vinculacion
    con el inventario)
  * Los filtros de fechas se guardan en cookies
    para que permanezcan tras la sesion
  * Filtrado por fechas en facturas
  * Primera version de informes
  * Ordenado de listados de proveedores

2011-05-13 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.3

  * Cambio estetico

2011-05-13 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.2

  * Eliminado plugin de will_paginate (se instala desde paquetes)
